k8s/services/loki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopno-monitoring
  labels:
    name: shopno-monitoring
    app.kubernetes.io/part-of: shopnoltd
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
